Finished the markup of the sign-in page

--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -20,6 +20,8 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" placeholder="Enter password" required />
                 <button type="submit">Enter</button>
+                
+                <p>Don't have an account? <a href="#">Sign-up</a></p>
             </form>
         </main>
     </body>
