--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -6,15 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         
         <title>Sign-in to Politico</title>
+
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Pathway+Gothic+One" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <h1>Politico</h1>
         </header>
         
-        <main>
+        <main class="sign-in">
             <h3>Sign-in</h3>
-            <form>
+            <form class="form">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" placeholder="Enter email" autofocus required />
                 <label for="password">Password</label>
