--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -24,7 +24,7 @@
                 <input type="password" name="password" id="password" placeholder="Enter password" required />
                 <button type="submit">Enter</button>
                 
-                <p>Don't have an account? <a href="#">Sign-up</a></p>
+                <p>Don't have an account? <a href="sign_up.html">Sign-up</a></p>
             </form>
         </main>
     </body>
