Added the markup for the reset password page

--- a/UI/reset_password.html
+++ b/UI/reset_password.html
@@ -21,10 +21,16 @@
                 <label for="oldPassword">Old password</label>
                 <input type="password" name="oldPassword" id="oldPassword" autofocus required />
                 <label for="newPassword">New password</label>
-                <input type="password" name="oldPassword" id="oldPassword" required />
-                <label for="newPassword">New password</label>
-                <input type="password" name="oldPassword" id="oldPassword" required />
+                <input type="password" name="oldPassword" id="oldPassword" required /> 
+                <label for="newPassword">Confirm new password</label>
+                <input type="password" name="oldPassword" id="oldPassword" required /> 
+                <button type="submit">Reset</button>
             </form>
         </main>
+        
+        <footer>
+            <p>&copy;Politico</p>
+            <p>All rights reserved</p>
+        </footer>
     </body>
 </html>
