--- a/UI/reset_password.html
+++ b/UI/reset_password.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         
-        <title>Sign-in to Politico</title>
+        <title>Politico</title>
 
         <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
         <link href="css/index.css" rel="stylesheet">
