Image file type specified for the user registration page

--- a/UI/sign_up.html
+++ b/UI/sign_up.html
@@ -29,7 +29,7 @@
                 <label for="phoneNumber">Phone Number</label>
                 <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="Telephone Number" required />
                 <label for="passport">Upload Passport Photograph</label>
-                <input type="file" name="passport" id="passport" required />
+                <input type="file" accept="image/*" name="passport" id="passport" required />
                 <button type="submit">Sign-up</button>
             </form>
         </main>  
