--- a/user_profile.html
+++ b/user_profile.html
@@ -16,8 +16,8 @@
             
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="user_home.html">Home</a></li>
+                    <li><a href="user_profile.html">Profile</a></li>
                     <li><a href="#">Logout</a></li>
                 </ul>
             </nav>
