Added a short message to the index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </header>
         
         <main class="sign-in">
+            <h4>Politico is a doubt-proof voting platform</h4>
             <h3>Sign-in</h3>
             <form class="form">
                 <label for="email">Email</label>
