The page for users to express interest

--- a/express_interest.html
+++ b/express_interest.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="user_home.html">Home</a></li>
                     <li><a href="user_profile.html">Profile</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="index.html">Logout</a></li>
                 </ul>
             </nav>
         </header>
@@ -28,19 +28,30 @@
             <form>
                 <select>
                     <option selected disabled>Choose office type</option>
+                    <option>Federal executive</option>
+                    <option>Federal legislative</option>
+                    <option>State executive</option>
+                    <option>State legislative</option>
                 </select>
                 <select>
                     <option selected disabled>Choose office name</option>
+                    <option>Presidential</option>
+                    <option>Governorship</option>
+                    <option>House of assembly</option>
+                    <option>House of representative</option>
                 </select>
                 <select>
                     <option selected disabled>Choose party</option>
+                    <option>PDP</option>
+                    <option>ACN</option>
+                    <option>ANPP</option>
                 </select>
                 <button type="submit">Register</button>
             </form>
         </main>
         
         <footer>
-            <p>&copy;Politico</p>
+            <p>&copy; 2019 Politico</p>
             <p>All rights reserved</p>
         </footer>
     </body>
