The user registration page

--- a/sign_up.html
+++ b/sign_up.html
@@ -30,12 +30,12 @@
                 <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="Telephone Number" required />
                 <label for="passport">Upload Passport Photograph</label>
                 <input type="file" accept="image/*" name="passport" id="passport" required />
-                <button type="submit">Sign-up</button>
+				<button type="submit"><a href="user_home.html">Sign-up</a></button>
             </form>
         </main>  
         
         <footer>
-            <p>&copy;Politico</p>
+            <p>&copy; 2019 Politico</p>
             <p>All rights reserved</p>
         </footer>
         
