A page where users can view voting pattern

--- a/user_profile.html
+++ b/user_profile.html
@@ -18,19 +18,36 @@
                 <ul>
                     <li><a href="user_home.html">Home</a></li>
                     <li><a href="user_profile.html">Profile</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="index.html">Logout</a></li>
                 </ul>
             </nav>
         </header>
         
         <main class="profile">
             <h3>Your Statistics</h3>
-            <p>Political offices and candidates voted for: </p>
-            <p id="resetLink"><a href="reset_password.html">Reset password?</a></p>
+            <h4>Voting pattern</h4>
+            <table>
+                    <tr>
+                        <th>Office type</th>
+                        <th>Candidate</th>
+                    </tr>
+                    <tr>
+                        <td>Presidency</td>
+                        <td>Harry Potter</td>
+                    </tr>
+                    <tr>
+                        <td>House of Assembly</td>
+                        <td>Hermione Granger</td>
+                    </tr>
+					<tr>
+                        <td>Governorship</td>
+                        <td>Tyrion Lannister</td>
+                    </tr>
+                </table>
         </main>
         
         <footer>
-            <p>&copy;Politico</p>
+            <p>&copy; 2019 Politico</p>
             <p>All rights reserved</p>
         </footer>
     </body>
