--- a/admin.html
+++ b/admin.html
@@ -49,7 +49,7 @@
                         <option>House of assembly</option>
                         <option>House of representative</option>
                     </select>
-                    <button type="submit">Submit</button>
+                    <button type="submit" class="createButton">Submit</button>
                 </form>
             </article>
         </section>
@@ -90,6 +90,15 @@
                         <td><button>Delete</button></td>
                     </tr>
                 </table>
+				
+				<div class="pagination">
+					<a href="#">&laquo;</a>
+					<a href="#" class="active">1</a>
+					<a href="#">2</a>
+					<a href="#">3</a>
+					<a href="#">4</a>
+					<a href="#">&raquo;</a>
+				</div>
             </article>
         </section>
         
