feat(admin): the administrator home page - presents the form to create a party - presents the form to create an office - lets admin edit and delete parties

--- a/admin.html
+++ b/admin.html
@@ -35,14 +35,14 @@
             <article>
                 <form>
                     <h3>Create office</h3>
-                    <select>
+                    <select class="createSelect">
                         <option selected disabled>Office type</option>
                         <option>Federal executive</option>
                         <option>Federal legislative</option>
                         <option>State executive</option>
                         <option>State legislative</option>
                     </select>
-                    <select>
+                    <select class="createSelect">
                         <option selected disabled>Office name</option>
                         <option>Presidential</option>
                         <option>Governorship</option>
