feat(user_page): The user landing page - Users can see the list of political parties - users can vote for a candidate

--- a/user_profile.html
+++ b/user_profile.html
@@ -24,8 +24,11 @@
         </header>
         
         <main class="profile">
-            <h3>Your Statistics</h3>
-            <h4>Voting pattern</h4>
+            <h3>Davinson Chukwu</h3>
+			<p>Male</p>
+			<p>davis_chukwu@gmail.com</p>
+			
+            <h4>Casted Vote</h4>
             <table>
                     <tr>
                         <th>Office type</th>
