Implemented UI feedback

--- a/admin.html
+++ b/admin.html
@@ -49,6 +49,7 @@
                         <option>House of assembly</option>
                         <option>House of representative</option>
                     </select>
+					<input type="text" placeholder="Office code" required />
                     <button type="submit" class="createButton">Submit</button>
                 </form>
             </article>
