--- a/sign_up.html
+++ b/sign_up.html
@@ -30,7 +30,7 @@
                 <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="Telephone Number" required />
                 <label for="passport">Upload Passport Photograph</label>
                 <input type="file" accept="image/*" name="passport" id="passport" required />
-				<button type="submit"><a href="user_home.html">Sign-up</a></button>
+				<button type="submit"><a href="admin.html">Sign-up</a></button>
             </form>
         </main>  
         
