--- a/user_profile.html
+++ b/user_profile.html
@@ -12,11 +12,20 @@
     </head>
     <body>
         <header>
-            <h1>Politico</h1>
+			<h1><a href="user_home.html">Politico</a></h1>
             
-            <nav>
+            
+			<div class="dropdown">
+				<a href="user_home.html" class="dropdownPrimary">Menu &#9660;</a>
+				<div class="dropdownSecondary">
+					<a href="express_interest.html">Express Interst</a>
+					<a href="office.html">Political Offices</a>
+					<a href="view_result.html">View Result</a>
+				</div>
+			</div>
+			<nav>
                 <ul>
-                    <li><a href="user_home.html">Home</a></li>
+					<li></li>
                     <li><a href="user_profile.html">Profile</a></li>
                     <li><a href="index.html">Logout</a></li>
                 </ul>
