--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body class="landingPage">
         <main class="overlay">
             <header>
-                <h1>Politico</h1>
+                <h1><a href="index.html">Politico</a></h1>
             </header>
         
             <h3>Politico is a super credible voting platform.</h3>
