--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <h1>Politico</h1>
+            <h1><a href="admin.html">Politico</a></h1>
             
             <nav>
                 <ul>
