--- a/sign_in.html
+++ b/sign_in.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <h1>Politico</h1>
+            <h1><a href="index.html">Politico</a></h1>
         </header>
           	
         <main class="sign-in">
