Added password fields to sign-up form

--- a/sign_up.html
+++ b/sign_up.html
@@ -30,6 +30,10 @@
                 <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="Telephone Number" required />
                 <label for="passport">Upload Passport Photograph</label>
                 <input type="file" accept="image/*" name="passport" id="passport" required />
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="Enter password" required />
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" name="comfirmPassword" id="password" placeholder="Confirm password" required />
 				<button type="submit"><a href="admin.html">Sign-up</a></button>
             </form>
         </main>  
