Renamed office by types

--- a/office.html
+++ b/office.html
@@ -39,10 +39,10 @@
 				<label class="filter">
 					Filter by type:
 					<select>
-						<option selected disabled>Federal executive</option>
-						<option>Federal legislative</option>
-						<option>State executive</option>
-						<option>State legislative</option>
+						<option selected disabled>Federal</option>
+						<option>Legislative</option>
+						<option>State</option>
+						<option>Local</option>
 					</select>
 				</label>
                 <table>
