--- a/view_result.html
+++ b/view_result.html
@@ -38,10 +38,10 @@
             <label class="filter">
 				Election results by office type:
 				<select>
-					<option selected disabled>State legislative</option>
-					<option>Federal legislative</option>
-					<option>State executive</option>
-					<option>Federal executive</option>
+					<option selected disabled>State</option>
+					<option>Federal</option>
+					<option>Legislative</option>
+					<option>Local</option>
 				</select>
 			</label>
 			
