--- a/admin.html
+++ b/admin.html
@@ -37,10 +37,10 @@
                     <h3>Create office</h3>
                     <select class="createSelect">
                         <option selected disabled>Office type</option>
-                        <option>Federal executive</option>
-                        <option>Federal legislative</option>
-                        <option>State executive</option>
-                        <option>State legislative</option>
+                        <option>Federal</option>
+                        <option>Legislative</option>
+                        <option>State</option>
+                        <option>Local</option>
                     </select>
                     <select class="createSelect">
                         <option selected disabled>Office name</option>
