Renamed office by types

--- a/express_interest.html
+++ b/express_interest.html
@@ -37,10 +37,10 @@
             <form>
                 <select>
                     <option selected disabled>Choose office type</option>
-                    <option>Federal executive</option>
-                    <option>Federal legislative</option>
-                    <option>State executive</option>
-                    <option>State legislative</option>
+                    <option>Federal</option>
+                    <option>Legislative</option>
+                    <option>State</option>
+                    <option>Local</option>
                 </select>
                 <select>
                     <option selected disabled>Choose office name</option>
