--- a/sign_in.html
+++ b/sign_in.html
@@ -14,7 +14,8 @@
         <header>
             <h1><a href="index.html">Politico</a></h1>
         </header>
-          	
+		<div class="alert hidden"><div></div><span>&times;</span></div>
+
         <main class="sign-in">
             <h3>Sign-in</h3>
             <form class="form">
@@ -22,7 +23,7 @@
                 <input type="email" name="email" id="email" placeholder="Enter email" autofocus required />
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" placeholder="Enter password" required />
-				<button type="submit"><a href="user_home.html">Enter</a></button>
+				<button type="submit">Enter</button>
                 <div><small class="forgotPassword"><a href="reset_password.html">Forgot password?</a></small></div> <br />
             </form>
         </main>
@@ -31,6 +32,7 @@
             <p>&copy; 2019 Politico</p>
             <p>All rights reserved</p>
         </footer>
-        
+		
+		<script src="js/signin.js" type="text/javascript"></script>
     </body>
 </html>
