--- a/sign_up.html
+++ b/sign_up.html
@@ -14,7 +14,7 @@
         <header>
             <h1><a href="index.html">Politico</a></h1>
         </header>
-         <div class="alert hidden"><div></div><span>&times;</span></div>
+        <div class="alert hidden"><div></div><span>&times;</span></div>
       
         <main class="sign-up">
             <h3>Register</h3>
@@ -42,6 +42,6 @@
             <p>All rights reserved</p>
         </footer>
         
-        <script src="js/sign_up.js" type="text/javascript"></script>
+        <script src="js/signup.js" type="text/javascript"></script>
     </body>
 </html>
