--- a/sign_in.html
+++ b/sign_in.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        
-        <title>Sign-in to Politico</title>
 
-        <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
-        <link href="css/index.css" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <h1><a href="index.html">Politico</a></h1>
-        </header>
-		<div class="alert hidden"><div></div><span>&times;</span></div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <main class="sign-in">
-            <h3>Sign-in</h3>
-            <form class="form">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="Enter email" autofocus required />
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="Enter password" required />
-				<button type="submit">Enter</button>
-                <div><small class="forgotPassword"><a href="reset_password.html">Forgot password?</a></small></div> <br />
-            </form>
-        </main>
-        
-        <footer>
-            <p>&copy; 2019 Politico</p>
-            <p>All rights reserved</p>
-        </footer>
-		
-		<script src="js/signin.js" type="text/javascript"></script>
-    </body>
+  <title>Sign-in to Politico</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <h1><a href="index.html">Politico</a></h1>
+  </header>
+  <div class="alert hidden">
+    <div></div><span>&times;</span>
+  </div>
+
+  <main class="sign-in">
+    <h3>Sign-in</h3>
+    <form class="form">
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email" placeholder="Enter email" autofocus required />
+      <label for="password">Password</label>
+      <input type="password" name="password" id="password" placeholder="Enter password" required />
+      <button type="submit">Enter</button>
+      <div><small class="forgotPassword"><a href="reset_password.html">Forgot password?</a></small></div> <br />
+    </form>
+  </main>
+
+  <footer>
+    <p>&copy; 2019 Politico</p>
+    <p>All rights reserved</p>
+  </footer>
+
+  <script src="js/signin.js" type="text/javascript"></script>
+</body>
+
 </html>
