ft(create-party) Consume the create party API - Consume the create party API - The API creates political parties and is available to admins alone [Delivers #164085450]

--- a/admin.html
+++ b/admin.html
@@ -24,9 +24,10 @@
     </nav>
   </header>
 
+  <section class="adminAlert"><div></div></section>
   <section>
     <article>
-      <form>
+      <form class="createPartyForm" method="post">
         <h3>Register Party</h3>
         <input type="text" placeholder="Party name" required />
         <input type="text" placeholder="Address" required />
