--- a/sign_in.html
+++ b/sign_in.html
@@ -22,7 +22,7 @@
 
   <main class="sign-in">
     <h3>Sign-in</h3>
-    <form class="form">
+    <form class="form" method="post">
       <label for="email">Email</label>
       <input type="email" name="email" id="email" placeholder="Enter email" autofocus required />
       <label for="password">Password</label>
