--- a/sign_up.html
+++ b/sign_up.html
@@ -22,7 +22,7 @@
 
   <main class="sign-up">
     <h3>Register</h3>
-    <form class="form">
+    <form class="form" method="post">
       <label for="firstname">First Name</label>
       <input type="text" name="firstname" id="firstname" placeholder="First Name" autofocus required />
       <label for="lastname">Last Name</label>
