ft(create-party) Consume the create party API - Consume the create party API - The API creates political parties and is available to admins alone [Delivers #164085450]

--- a/admin.html
+++ b/admin.html
@@ -111,6 +111,8 @@
     <p>&copy; 2019 Politico</p>
     <p>All rights reserved</p>
   </footer>
+
+  <script type="text/javascript" src="js/admin.js"></script>
 </body>
 
 </html>
