--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
     </nav>
   </header>
 
-  <section class="adminAlert hidden"><div>hi</div></section>
+  <section class="adminAlert hidden"><div></div></section>
   <section>
     <article>
       <form class="createPartyForm" method="post">
@@ -66,7 +66,7 @@
       <h3>Registered Parties</h3>
 
       <table>
-        <tr>
+        <!-- <tr>
           <th>ID</th>
           <th>Party Name</th>
           <th>Logo</th>
@@ -93,7 +93,7 @@
           <td><img src="img/adp.jpg" alt="party_logo" width="50px" height="50px"></td>
           <td><button>Edit</button></td>
           <td><button>Delete</button></td>
-        </tr>
+        </tr> -->
       </table>
 
       <div class="pagination">
