ft(get-all-party) Consumes the get all party api - renders the parties [Delivers #164086393]

--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
     </nav>
   </header>
 
-  <section class="adminAlert hidden"><div></div></section>
+  <section class="adminAlert"><div class="hidden">hi</div></section>
   <section>
     <article>
       <form class="createPartyForm" method="post">
