--- a/office.html
+++ b/office.html
@@ -10,6 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <!-- <script type="text/javascript" src="js/accessCheck.js"></script> -->
 </head>
 
 <body>
@@ -48,7 +49,7 @@
         </select>
       </label>
       <table>
-        <tr>
+        <!-- <tr>
           <th>ID</th>
           <th>Office Name</th>
           <th>Candidate</th>
@@ -75,7 +76,7 @@
           <td>Clark Kent</td>
           <td><img src="img/man2.jpeg" alt="party_logo" width="50px" height="50px"></td>
           <td><button>Vote</button></td>
-        </tr>
+        </tr> -->
       </table>
 
       <div class="pagination">
@@ -94,6 +95,8 @@
     <p>&copy; 2019 Politico</p>
     <p>All rights reserved</p>
   </footer>
+
+  <script type="text/javascript" src="js/office.js"></script>
 </body>
 
 </html>
