--- a/user_home.html
+++ b/user_home.html
@@ -41,7 +41,7 @@
       <h3 class="partyTable">Registered political parties</h3>
 
       <table>
-        <tr>
+        <!-- <tr>
           <th>ID</th>
           <th>Party Name</th>
           <th>Address</th>
@@ -70,7 +70,7 @@
           <td>GPN</td>
           <td>Iwo Road, Ibadan</td>
           <td><img src="img/gpn.jpeg" alt="party_logo" width="50px" height="50px"></td>
-        </tr>
+        </tr> -->
       </table>
 
       <div class="pagination">
@@ -89,6 +89,8 @@
     <p>&copy; 2019 Politico</p>
     <p>All rights reserved</p>
   </footer>
+
+  <script type="text/javascript" src="js/userHome.js"></script>
 </body>
 
 </html>
