ft(edit-party) consume the edit party api - edits party name - renders new party name [Delivers #164085560]

--- a/admin.html
+++ b/admin.html
@@ -64,7 +64,7 @@
   <section>
     <article>
       <h3>Registered Parties</h3>
-
+      <div class="editPartyForm"><input class="edit" type="text" name="name" required /><button class="editButton" type="submit">Change</button></div>
       <table>
         <!-- <tr>
           <th>ID</th>
