ft(edit-party) consume the edit party api - edits party name - renders new party name [Delivers #164085560]

--- a/admin.html
+++ b/admin.html
@@ -64,36 +64,10 @@
   <section>
     <article>
       <h3>Registered Parties</h3>
-      <div class="editPartyForm"><input class="edit" type="text" name="name" required /><button class="editButton" type="submit">Change</button></div>
+      <div class="editPartyForm"><div class="hidden"><input class="edit" placeholder="Enter new name." type="text" autofocus required /><button type="submit" class="editButton">Change</button><button class="editButton cancelButton">Cancel</button></div></div>
+      <div class="editInfo hidden"></div>
+      
       <table>
-        <!-- <tr>
-          <th>ID</th>
-          <th>Party Name</th>
-          <th>Logo</th>
-          <th></th>
-          <th></th>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>PDP</td>
-          <td><img src="img/pdp.jpg" alt="party_logo" width="50px" height="50px"></td>
-          <td><button>Edit</button></td>
-          <td><button>Delete</button></td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>APC</td>
-          <td><img src="img/apc.jpeg" alt="party_logo" width="50px" height="50px"></td>
-          <td><button>Edit</button></td>
-          <td><button>Delete</button></td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>ADP</td>
-          <td><img src="img/adp.jpg" alt="party_logo" width="50px" height="50px"></td>
-          <td><button>Edit</button></td>
-          <td><button>Delete</button></td>
-        </tr> -->
       </table>
 
       <div class="pagination">
