--- a/office.html
+++ b/office.html
@@ -17,7 +17,6 @@
   <header>
     <h1><a href="user_home.html">Politico</a></h1>
 
-
     <div class="dropdown">
       <a href="user_home.html" class="dropdownPrimary">Menu &#9660;</a>
       <div class="dropdownSecondary">
@@ -52,14 +51,14 @@
       <table>
       </table>
 
-      <div class="pagination">
+      <!-- <div class="pagination">
         <a href="#">&laquo;</a>
         <a href="#" class="active">1</a>
         <a href="#">2</a>
         <a href="#">3</a>
         <a href="#">4</a>
         <a href="#">&raquo;</a>
-      </div>
+      </div> -->
 
     </article>
   </section>
