--- a/user_home.html
+++ b/user_home.html
@@ -40,17 +40,23 @@
 
       <h3 class="partyTable">Registered political parties</h3>
 
+      <label class="filter">
+        Filter by ID:
+        <input type="number" class="partyId" />
+        <button class="getPartyButton">Get party</button>
+      </label>
+
       <table>
       </table>
 
-      <div class="pagination">
+      <!-- <div class="pagination">
         <a href="#">&laquo;</a>
         <a href="#" class="active">1</a>
         <a href="#">2</a>
         <a href="#">3</a>
         <a href="#">4</a>
         <a href="#">&raquo;</a>
-      </div>
+      </div> -->
 
     </article>
   </section>
