--- a/view_result.html
+++ b/view_result.html
@@ -78,14 +78,14 @@
       </tr>
     </table>
 
-    <div class="pagination">
+    <!-- <div class="pagination">
       <a href="#">&laquo;</a>
       <a href="#" class="active">1</a>
       <a href="#">2</a>
       <a href="#">3</a>
       <a href="#">4</a>
       <a href="#">&raquo;</a>
-    </div>
+    </div> -->
   </main>
 
   <footer>
