ft(consume-get-specific-office) Consumed the get specific office API - Reads the list of parties from the database - Updates the UI with the result [Delivers #164086505]

--- a/office.html
+++ b/office.html
@@ -39,14 +39,11 @@
       <h3>Offices</h3>
 
       <label class="filter">
-        Filter by type:
-        <select>
-          <option selected disabled>Federal</option>
-          <option>Legislative</option>
-          <option>State</option>
-          <option>Local</option>
-        </select>
+        Filter by ID:
+        <input type="number" class="officeId" />
+        <button class="getOfficeButton">Get office</button>
       </label>
+      <div class="editInfo hidden"></div>
 
       <table>
       </table>
