--- a/user_home.html
+++ b/user_home.html
@@ -45,6 +45,7 @@
         <input type="number" class="partyId" />
         <button class="getPartyButton">Get party</button>
       </label>
+      <div class="editInfo hidden"></div>
 
       <table>
       </table>
