Began with the user can vote feature

--- a/user_home.html
+++ b/user_home.html
@@ -17,13 +17,13 @@
   <header>
     <h1><a href="user_home.html">Politico</a></h1>
 
-
     <div class="dropdown">
       <a href="user_home.html" class="dropdownPrimary">Menu &#9660;</a>
       <div class="dropdownSecondary">
         <a href="express_interest.html">Express Interst</a>
         <a href="office.html">Political Offices</a>
         <a href="view_result.html">View Result</a>
+        <a href="vote.html">Cast Vote</a>
       </div>
     </div>
     <nav>
