--- a/vote.html
+++ b/vote.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Politico</title>
+  <title>Sign-in to Politico</title>
 
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+   <!-- <script type="text/javascript" src="js/accessCheck.js"></script> -->
 </head>
 
 <body>
   <header>
     <h1><a href="user_home.html">Politico</a></h1>
-
 
     <div class="dropdown">
       <a href="user_home.html" class="dropdownPrimary">Menu &#9660;</a>
@@ -23,6 +23,7 @@
         <a href="express_interest.html">Express Interst</a>
         <a href="office.html">Political Offices</a>
         <a href="view_result.html">View Result</a>
+        <a href="view_result.html">Cast Vote</a>
       </div>
     </div>
     <nav>
@@ -34,36 +35,56 @@
     </nav>
   </header>
 
-  <main class="profile">
-    <h3>Davinson Chukwu</h3>
-    <p>Male</p>
-    <p>davis_chukwu@gmail.com</p>
+  <main class="electionResults">
+    <h3>Cast vote</h3>
 
-    <h4>Cast Votes</h4>
+    <label class="filter">
+      Filter by office type:
+      <select class="voteOfficeOption">
+        <option selected disabled>Office</option>
+      </select>
+    </label>
+
     <table>
       <tr>
-        <th>Office type</th>
+        <th>ID</th>
+        <th>Office Name</th>
         <th>Candidate</th>
+        <th>Candidate's photo</th>
+        <th>Votes</th>
       </tr>
       <tr>
-        <td>Presidency</td>
-        <td>Harry Potter</td>
+        <td>1</td>
+        <td>House of Assembly</td>
+        <td>Frodo Baggins</td>
+        <td><img src="img/man1.jpg" alt="party_logo" width="50px" height="50px"></td>
+        <td>23</td>
       </tr>
       <tr>
+        <td>2</td>
         <td>House of Assembly</td>
         <td>Hermione Granger</td>
+        <td><img src="img/woman.jpeg" alt="party_logo" width="50px" height="50px"></td>
+        <td>17</td>
       </tr>
       <tr>
-        <td>Governorship</td>
+        <td>3</td>
+        <td>House of Assembly</td>
         <td>Tyrion Lannister</td>
+        <td><img src="img/man2.jpeg" alt="party_logo" width="50px" height="50px"></td>
+        <td>21</td>
       </tr>
     </table>
+
   </main>
 
   <footer>
     <p>&copy; 2019 Politico</p>
     <p>All rights reserved</p>
   </footer>
+
+  <script type="text/javascript" src="js/vote.js"></script>
+
 </body>
 
 </html>
