--- a/vote.html
+++ b/vote.html
@@ -10,7 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-   <!-- <script type="text/javascript" src="js/accessCheck.js"></script> -->
+  <!-- <script type="text/javascript" src="js/accessCheck.js"></script> -->
 </head>
 
 <body>
@@ -36,44 +36,21 @@
   </header>
 
   <main class="electionResults">
+
     <h3>Cast vote</h3>
 
+    <section class="adminAlert">
+      <div class="hidden"></div>
+    </section>
+
     <label class="filter">
-      Filter by office type:
+      View by office type:
       <select class="voteOfficeOption">
-        <option selected disabled>Office</option>
+        <option selected disabled>Choose office</option>
       </select>
     </label>
 
     <table>
-      <tr>
-        <th>ID</th>
-        <th>Office Name</th>
-        <th>Candidate</th>
-        <th>Candidate's photo</th>
-        <th>Votes</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>House of Assembly</td>
-        <td>Frodo Baggins</td>
-        <td><img src="img/man1.jpg" alt="party_logo" width="50px" height="50px"></td>
-        <td>23</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>House of Assembly</td>
-        <td>Hermione Granger</td>
-        <td><img src="img/woman.jpeg" alt="party_logo" width="50px" height="50px"></td>
-        <td>17</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>House of Assembly</td>
-        <td>Tyrion Lannister</td>
-        <td><img src="img/man2.jpeg" alt="party_logo" width="50px" height="50px"></td>
-        <td>21</td>
-      </tr>
     </table>
 
   </main>
