ft(improve UI) Improve the UI and remove unwanted elements - Removes the pagination - Adds the logout feature [Delivers #164296863]

--- a/sign_in.html
+++ b/sign_in.html
@@ -28,7 +28,7 @@
       <label for="password">Password</label>
       <input type="password" name="password" id="password" placeholder="Enter password" required />
       <button type="submit">Enter</button>
-      <div><small class="forgotPassword"><a href="reset_password.html">Forgot password?</a></small></div> <br />
+      <!-- <div><small class="forgotPassword"><a href="reset_password.html">Forgot password?</a></small></div> <br /> -->
     </form>
   </main>
 
