--- a/view_result.html
+++ b/view_result.html
@@ -10,26 +10,24 @@
 
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <!-- <script type="text/javascript" src="js/accessCheck.js"></script> -->
 </head>
 
 <body>
   <header>
     <h1><a href="user_home.html">Politico</a></h1>
 
-
     <div class="dropdown">
-      <a href="user_home.html" class="dropdownPrimary">Menu &#9660;</a>
+      <a href="user_home.html" class="dropdownPrimary">Menu <span>&#9660;</span></a>
       <div class="dropdownSecondary">
-        <a href="express_interest.html">Express Interst</a>
         <a href="office.html">Political Offices</a>
+        <a href="vote.html">Cast Vote</a>
         <a href="view_result.html">View Result</a>
       </div>
     </div>
     <nav>
       <ul>
-        <li></li>
-        <li><a href="user_profile.html">Profile</a></li>
-        <li><a href="index.html">Logout</a></li>
+        <li><a class="logout" href="index.html">Logout</a></li>
       </ul>
     </nav>
   </header>
@@ -47,14 +45,6 @@
     <table>
     </table>
 
-    <!-- <div class="pagination">
-      <a href="#">&laquo;</a>
-      <a href="#" class="active">1</a>
-      <a href="#">2</a>
-      <a href="#">3</a>
-      <a href="#">4</a>
-      <a href="#">&raquo;</a>
-    </div> -->
   </main>
 
   <footer>
@@ -63,6 +53,7 @@
   </footer>
 
   <script type="text/javascript" src="js/result.js"></script>
+  <script type="text/javascript" src="js/logout.js"></script>
 </body>
 
 </html>
