--- a/office.html
+++ b/office.html
@@ -18,18 +18,16 @@
     <h1><a href="user_home.html">Politico</a></h1>
 
     <div class="dropdown">
-      <a href="user_home.html" class="dropdownPrimary">Menu &#9660;</a>
+      <a href="user_home.html" class="dropdownPrimary">Menu <span>&#9660;</span></a>
       <div class="dropdownSecondary">
-        <a href="express_interest.html">Express Interst</a>
         <a href="office.html">Political Offices</a>
+        <a href="vote.html">Cast Vote</a>
         <a href="view_result.html">View Result</a>
       </div>
     </div>
     <nav>
       <ul>
-        <li></li>
-        <li><a href="user_profile.html">Profile</a></li>
-        <li><a href="index.html">Logout</a></li>
+        <li><a class="logout" href="index.html">Logout</a></li>
       </ul>
     </nav>
   </header>
@@ -48,15 +46,6 @@
       <table>
       </table>
 
-      <!-- <div class="pagination">
-        <a href="#">&laquo;</a>
-        <a href="#" class="active">1</a>
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
-        <a href="#">&raquo;</a>
-      </div> -->
-
     </article>
   </section>
 
@@ -66,6 +55,7 @@
   </footer>
 
   <script type="text/javascript" src="js/office.js"></script>
+  <script type="text/javascript" src="js/logout.js"></script>
 </body>
 
 </html>
