--- a/vote.html
+++ b/vote.html
@@ -18,19 +18,16 @@
     <h1><a href="user_home.html">Politico</a></h1>
 
     <div class="dropdown">
-      <a href="user_home.html" class="dropdownPrimary">Menu &#9660;</a>
+      <a href="user_home.html" class="dropdownPrimary">Menu <span>&#9660;</span></a>
       <div class="dropdownSecondary">
-        <a href="express_interest.html">Express Interst</a>
         <a href="office.html">Political Offices</a>
+        <a href="vote.html">Cast Vote</a>
         <a href="view_result.html">View Result</a>
-        <a href="view_result.html">Cast Vote</a>
       </div>
     </div>
     <nav>
       <ul>
-        <li></li>
-        <li><a href="user_profile.html">Profile</a></li>
-        <li><a href="index.html">Logout</a></li>
+        <li><a class="logout" href="index.html">Logout</a></li>
       </ul>
     </nav>
   </header>
@@ -60,6 +57,7 @@
   </footer>
 
   <script type="text/javascript" src="js/vote.js"></script>
+  <script type="text/javascript" src="js/logout.js"></script>
 
 </body>
 
