ft(improve UI) Improve the UI and remove unwanted elements - Removes the pagination - Adds the logout feature [Delivers #164296863]

--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
 
     <nav>
       <ul>
-        <li><a href="express_interest.html">Express Interest</a></li>
+        <li><a href="express_interest.html">Register Candidate</a></li>
         <li><a class="logout" href="index.html">Logout</a></li>
       </ul>
     </nav>
