--- a/express_interest.html
+++ b/express_interest.html
@@ -19,7 +19,7 @@
 
     <nav>
       <ul>
-        <li><a href="express_interest.html">Express Interest</a></li>
+        <li><a href="express_interest.html">Register Candidate</a></li>
         <li><a class="logout" href="index.html">Logout</a></li>
       </ul>
     </nav>
