--- a/office.html
+++ b/office.html
@@ -18,8 +18,9 @@
     <h1><a href="user_home.html">Politico</a></h1>
 
     <div class="dropdown">
-      <a href="user_home.html" class="dropdownPrimary">Menu <span>&#9660;</span></a>
-      <div class="dropdownSecondary">
+      <a href="#" class="dropdownPrimary">Menu <span>&#9660;</span></a>
+      <div class="dropdownSecondary hidden">
+        <a href="user_home.html">Parties</a>
         <a href="office.html">Political Offices</a>
         <a href="vote.html">Cast Vote</a>
         <a href="view_result.html">View Result</a>
@@ -55,6 +56,7 @@
   </footer>
 
   <script type="text/javascript" src="js/office.js"></script>
+  <script type="text/javascript" src="js/dropdown.js"></script>
   <script type="text/javascript" src="js/logout.js"></script>
 </body>
 
