--- a/user_profile.html
+++ b/user_profile.html
@@ -10,7 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-  <script type="text/javascript" src="js/accessCheck.js"></script>
+  <!-- <script type="text/javascript" src="js/accessCheck.js"></script> -->
 </head>
 
 <body>
@@ -18,8 +18,9 @@
     <h1><a href="user_home.html">Politico</a></h1>
 
     <div class="dropdown">
-      <a href="user_home.html" class="dropdownPrimary">Menu <span>&#9660;</span></a>
-      <div class="dropdownSecondary">
+      <a href="#" class="dropdownPrimary">Menu <span>&#9660;</span></a>
+      <div class="dropdownSecondary hidden">
+        <a href="user_home.html">Parties</a>
         <a href="office.html">Political Offices</a>
         <a href="vote.html">Cast Vote</a>
         <a href="view_result.html">View Result</a>
@@ -63,7 +64,7 @@
     <p>All rights reserved</p>
   </footer>
 
-  <script type="text/javascript" src="js/profile.js"></script>
+  <script type="text/javascript" src="js/dropdown.js"></script>
   <script type="text/javascript" src="js/logout.js"></script>
 </body>
 
