ft(consume-get-specific-voter) Consume the get specific voter API - Get a specific voter - Use it to render the voting history of the user [Delivers #164318380]

--- a/user_profile.html
+++ b/user_profile.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Politico</title>
+  <title>Sign-in to Politico</title>
 
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
@@ -24,6 +24,7 @@
         <a href="office.html">Political Offices</a>
         <a href="vote.html">Cast Vote</a>
         <a href="view_result.html">View Result</a>
+        <a href="user_profile.html">Profile</a>
       </div>
     </div>
     <nav>
@@ -34,29 +35,17 @@
   </header>
 
   <main class="profile">
-    <h3 class="username">Davinson Chukwu</h3>
-    <p class="phoneNumber">Male</p>
-    <p class="emailAddress">davis_chukwu@gmail.com</p>
+    <div class="profilePicture"></div>
+
+    <h3 class="username">Loading...</h3>
+    <p class="phoneNumber"></p>
+    <p class="emailAddress"></p>
 
     <h4>Cast Votes</h4>
+
     <table>
-      <tr>
-        <th>Office type</th>
-        <th>Candidate</th>
-      </tr>
-      <tr>
-        <td>Presidency</td>
-        <td>Harry Potter</td>
-      </tr>
-      <tr>
-        <td>House of Assembly</td>
-        <td>Hermione Granger</td>
-      </tr>
-      <tr>
-        <td>Governorship</td>
-        <td>Tyrion Lannister</td>
-      </tr>
     </table>
+
   </main>
 
   <footer>
@@ -64,8 +53,10 @@
     <p>All rights reserved</p>
   </footer>
 
+  <script type="text/javascript" src="js/profile.js"></script>
   <script type="text/javascript" src="js/dropdown.js"></script>
   <script type="text/javascript" src="js/logout.js"></script>
+
 </body>
 
 </html>
