--- a/view_result.html
+++ b/view_result.html
@@ -24,6 +24,8 @@
         <a href="office.html">Political Offices</a>
         <a href="vote.html">Cast Vote</a>
         <a href="view_result.html">View Result</a>
+        <a href="user_profile.html">Profile</a>
+        <a href="user_profile.html">Profile</a>
       </div>
     </div>
     <nav>
