ft(consume-get-specific-voter) Consume the get specific voter API - Added favicon - Consumed get specific voter API - Created and implemented the user profile and voting history page [Delivers #164318380]

--- a/admin.html
+++ b/admin.html
@@ -8,9 +8,15 @@
 
   <title>Politico</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-  <!-- <script type="text/javascript" src="js/adminAccessCheck.js"></script> -->
+  
+  <script type="text/javascript" src="js/adminAccessCheck.js"></script>
 </head>
 
 <body>
@@ -19,7 +25,7 @@
 
     <nav>
       <ul>
-        <li><a href="express_interest.html">Register Candidate</a></li>
+        <li><a href="express_interest.html">Candidate</a></li>
         <li><a class="logout" href="index.html">Logout</a></li>
       </ul>
     </nav>
@@ -47,7 +53,6 @@
           <option>Federal</option>
           <option>Legislative</option>
           <option>State</option>
-          <option>Local</option>
         </select>
         <select class="createSelect" id="officeName">
           <option selected disabled>Office name</option>
