--- a/express_interest.html
+++ b/express_interest.html
@@ -8,18 +8,24 @@
 
   <title>Politico</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-  <!-- <script type="text/javascript" src="js/adminAccessCheck.js"></script> -->
+  
+  <script type="text/javascript" src="js/adminAccessCheck.js"></script>
 </head>
 
 <body>
   <header>
-   <h1><a href="admin.html">Politico</a></h1>
+    <h1><a href="admin.html">Politico</a></h1>
 
     <nav>
       <ul>
-        <li><a href="express_interest.html">Register Candidate</a></li>
+        <li><a href="express_interest.html">Candidate</a></li>
         <li><a class="logout" href="index.html">Logout</a></li>
       </ul>
     </nav>
@@ -41,7 +47,9 @@
     </form>
   </main>
 
-  <section class="adminAlert"><div class="hidden">hi</div></section>
+  <section class="adminAlert">
+    <div class="hidden">hi</div>
+  </section>
 
   <footer>
     <p>&copy; 2019 Politico</p>
