--- a/vote.html
+++ b/vote.html
@@ -6,11 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Sign-in to Politico</title>
+  <title>Politico</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
 
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-  <!-- <script type="text/javascript" src="js/accessCheck.js"></script> -->
+  
+  <script type="text/javascript" src="js/accessCheck.js"></script>
 </head>
 
 <body>
@@ -48,8 +54,10 @@
       </select>
     </label>
 
-    <table>
-    </table>
+    <div class="displayTable">
+      <table>
+      </table>
+    </div>
 
   </main>
 
