--- a/view_result.html
+++ b/view_result.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
   
-  <script type="text/javascript" src="js/accessCheck.js"></script>
+  <!-- <script type="text/javascript" src="js/accessCheck.js"></script> -->
 </head>
 
 <body>
