Made the add party reflect immediately without reload

--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pathway+Gothic+One" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
   
-  <script type="text/javascript" src="js/adminAccessCheck.js"></script>
+  <!-- <script type="text/javascript" src="js/adminAccessCheck.js"></script> -->
 </head>
 
 <body>
